--- a/src/ui/site/HeroSection.css
+++ b/src/ui/site/HeroSection.css
@@ -14,7 +14,7 @@
 }
 
 .HeroSection__main {
-  padding-top: 140px;
+  padding-top: 100px;
   gap: 45px;
 }
 
